--- a/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -35,7 +35,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="name"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/colorGray"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:text="email"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@color/colorGray" />
 
             </LinearLayout>
 
@@ -60,7 +60,7 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+            app:srcCompat="@drawable/ic_edit_gray_24dp" />
 
         <ImageView
             android:id="@+id/imageDelete"
@@ -69,6 +69,6 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
+            app:srcCompat="@drawable/ic_delete_gray_24dp" />
     </LinearLayout>
 </LinearLayout>
