--- a/app/src/main/res/layout-v21/lista_recycler_courses.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_courses.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="nameCourse"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="acronCourse"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/colorGray" />
 
             <TextView
                 android:id="@+id/nameUniversity"
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="nameUniversity"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -54,7 +54,7 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+            app:srcCompat="@drawable/ic_edit_gray_24dp" />
 
         <ImageView
             android:id="@+id/imageDelete"
@@ -63,6 +63,6 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
+            app:srcCompat="@drawable/ic_delete_gray_24dp" />
     </LinearLayout>
 </LinearLayout>
