--- a/app/src/main/res/layout-v21/lista_recycler_events_calendar.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_events_calendar.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="classSubject"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
                     android:layout_weight="2.2"
                     android:text="classDate"
                     android:textAlignment="center"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="12sp" />
 
                 <TextView
@@ -54,7 +54,7 @@
                     android:layout_weight="2.2"
                     android:text="classtime"
                     android:textAlignment="textEnd"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -72,7 +72,7 @@
                     android:layout_weight="0.4"
                     android:text="classNameDiscipline"
                     android:textAlignment="textStart"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="12sp" />
 
                 <TextView
@@ -82,7 +82,7 @@
                     android:layout_weight="1"
                     android:text="classDuration"
                     android:textAlignment="textEnd"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="classNameCourse"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="12sp" />
 
             <TextView
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="classNameUniversity"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="12sp" />
 
         </LinearLayout>
