--- a/app/src/main/res/layout-v21/lista_recycler_students.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_students.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -34,7 +34,7 @@
                     android:paddingRight="20dp"
                     android:text="ADD/REMOVE DISCIPLINES"
                     android:textAlignment="textEnd"
-                    android:textColor="@color/colorBright"
+                    android:textColor="@color/colorGray"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -48,7 +48,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="name"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/colorGray"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:text="email"
-                    android:textColor="@color/colorBright" />
+                    android:textColor="@color/colorGray" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="is Delegate?"
-                        android:textColor="@color/colorBright" />
+                        android:textColor="@color/colorGray" />
 
                     <TextView
                         android:id="@+id/studentDelegate"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.4"
                         android:text="YES"
-                        android:textColor="@color/colorBright"
+                        android:textColor="@color/colorGray"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -100,7 +100,7 @@
                         android:layout_marginTop="4dp"
                         android:layout_weight="1"
                         android:text="University"
-                        android:textColor="@color/colorBright" />
+                        android:textColor="@color/colorGray" />
 
                     <TextView
                         android:id="@+id/courseName"
@@ -109,7 +109,7 @@
                         android:layout_marginTop="4dp"
                         android:layout_weight="1"
                         android:text="Course"
-                        android:textColor="@color/colorBright" />
+                        android:textColor="@color/colorGray" />
 
                 </LinearLayout>
 
@@ -124,7 +124,7 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+            app:srcCompat="@drawable/ic_edit_gray_24dp" />
 
         <ImageView
             android:id="@+id/imageDelete"
@@ -133,6 +133,6 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
+            app:srcCompat="@drawable/ic_delete_gray_24dp" />
     </LinearLayout>
 </LinearLayout>
