--- a/app/src/main/res/layout-v21/lista_recycler_students_disciplines.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_students_disciplines.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="nameDiscipline"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="year"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@color/colorGray" />
 
                 <TextView
                     android:id="@+id/semesterDiscipline"
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="semester"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@color/colorGray" />
             </LinearLayout>
 
         </LinearLayout>
@@ -60,6 +60,6 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
+            app:srcCompat="@drawable/ic_delete_gray_24dp" />
     </LinearLayout>
 </LinearLayout>
