--- a/app/src/main/res/layout/lista_recycler_classes.xml
+++ b/app/src/main/res/layout/lista_recycler_classes.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -33,7 +33,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.1"
                     android:text="classHour"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
                     android:layout_weight="0.1"
                     android:text="Classroom: "
                     android:textAlignment="textEnd"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -53,7 +53,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.1"
                     android:text="Classroom"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorGray"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -66,7 +66,7 @@
                 android:layout_weight="1"
                 android:text="Subject of the class"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:text="nameDiscipline"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="14sp" />
 
             <TextView
@@ -85,7 +85,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="nameCourse"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="14sp" />
 
             <TextView
@@ -94,7 +94,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="nameUniversity"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="14sp" />
 
         </LinearLayout>
