--- a/app/src/main/res/layout/lista_recycler_universities.xml
+++ b/app/src/main/res/layout/lista_recycler_universities.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="nameUni"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="acronUni"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/colorGray" />
         </LinearLayout>
 
         <ImageView
@@ -44,7 +44,7 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+            app:srcCompat="@drawable/ic_edit_gray_24dp" />
 
         <ImageView
             android:id="@+id/imageDelete"
@@ -53,6 +53,6 @@
             android:layout_gravity="end"
             android:layout_weight="0.2"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
+            app:srcCompat="@drawable/ic_delete_gray_24dp" />
     </LinearLayout>
 </LinearLayout>
