--- a/app/src/main/res/layout/lista_recycler_years.xml
+++ b/app/src/main/res/layout/lista_recycler_years.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#807E57"
+        android:background="@color/colorLightGray"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -25,7 +25,7 @@
                 android:layout_width="345dp"
                 android:layout_height="wrap_content"
                 android:text="yearName"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -36,7 +36,7 @@
                 android:layout_gravity="end"
                 android:layout_weight="0.2"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/ic_delete_white_24dp" />
+                app:srcCompat="@drawable/ic_delete_gray_24dp" />
 
         </LinearLayout>
 
