--- a/app/src/main/res/layout/app_bar_nav_main.xml
+++ b/app/src/main/res/layout/app_bar_nav_main.xml
@@ -36,13 +36,20 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerEvents"
+        <FrameLayout
+            android:id="@+id/vaiFrame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical">
+            android:layout_height="match_parent">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerEvents"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical">
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </FrameLayout>
+
     </LinearLayout>
 
     <include
