--- a/app/src/main/res/layout/fragment_special_class_add.xml
+++ b/app/src/main/res/layout/fragment_special_class_add.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frmSpecialClassesAddEdit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ClassAddFragment">
+    tools:context=".fragment.SpecialClassAddFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,12 +45,10 @@
                 android:text="Subject"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/subjectEditText"
+            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                android:id="@+id/spinnerSpecial"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -156,24 +154,8 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewConteudo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Topics and contents:"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/editTextContent"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine" />
-
             <Button
-                android:id="@+id/buttonClassAdd"
+                android:id="@+id/buttonSpecialClassAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
