--- a/app/src/main/res/layout-v21/activity_class_add.xml
+++ b/app/src/main/res/layout-v21/activity_class_add.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frmClassesAddEdit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ClassAddFragment">
+    android:orientation="horizontal"
+    tools:context=".activity.ClassAddActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -236,4 +236,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
