--- a/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
@@ -24,6 +24,19 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/addCourse"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:layout_weight="1"
+                    android:paddingRight="20dp"
+                    android:text="ADD/REMOVE COURSES"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/colorGray"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
