--- a/app/src/main/res/layout/activity_class_update.xml
+++ b/app/src/main/res/layout/activity_class_update.xml
@@ -295,7 +295,7 @@
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:text="ADD"
+                    android:text="UPDATE"
                     android:theme="@style/botaoPadraoBrown" />
 
             </LinearLayout>
@@ -305,3 +305,4 @@
     </LinearLayout>
 
 </LinearLayout>
+
