--- a/app/src/main/res/layout-v21/lista_recycler_disciplines.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_disciplines.xml
@@ -97,14 +97,31 @@
                 android:textColor="@color/colorGray"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/nameUniversity"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="nameUniversity"
-                android:textColor="@color/colorGray"
-                android:textSize="12sp" />
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/nameUniversity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="nameUniversity"
+                    android:textColor="@color/colorGray"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/disciplineDuplicate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:drawableLeft="@drawable/ic_duplicate"
+                    android:text=" duplicate?"
+                    android:textAlignment="textStart"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
         </LinearLayout>
 
