--- a/app/src/main/res/menu/activity_nav_main_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/action_settings" />
         <item
+            android:id="@+id/nav_navigation"
+            android:icon="@android:drawable/ic_search_category_default"
+            android:title="@string/menu_navigation" />
+        <item
             android:id="@+id/nav_messages"
             android:icon="@android:drawable/sym_action_email"
             android:title="@string/menu_messages" />
