--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -35,7 +35,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerDiscipline"
+            android:id="@+id/recyclerClasses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp" />
